# SMTLIBGenerator

./: .gitignore  CMakeLists.txt  README.md
examples/: example1.smt2
src/: generator.cpp  generator.h  main.cpp
src/theories/: NTA.h  QF_LIA.h  QF_NTA.h
